9_demoapp-nodejs-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "demoapp-nodejs"
  namespace: "prod"
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: NodePort
  selector:
    app: "demoapp-nodejs"
