9_demoapp-nodejs-test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "demoapp-nodejs"
  namespace: "prod"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: demoapp-nodejs
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "demoapp-nodejs"
              servicePort: 5000
